Bug squashing is finished in main.css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1949,7 +1949,7 @@ h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
 }
 
 h2 {
-	font-size: 15pt !important;
+	font-size: 25pt !important;
 }
 
 h3 {
